# desafios-fullstack-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/bot/: browser.py  parser.py  scraper.py
app/core/: config.py  exceptions.py
app/models/: request.py  response.py
app/services/: consulta_service.py
tests/integration/: test_consulta.py
tests/unit/: test_exceptions.py  test_models.py  test_parser.py
